fix: modal z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,6 +480,7 @@ html {
   display: none;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 .modal-container {
